Signed-off-by: fhogan <fhogan@mit.com>

--- a/catkin_ws/src/push_control/CMakeLists.txt
+++ b/catkin_ws/src/push_control/CMakeLists.txt
@@ -139,7 +139,7 @@ include_directories(
 #################
 ## Executables ##
 #################
-add_executable(push_control  src/HybridController.cpp src/GPDataController.cpp src/Helper.cpp src/ikfast_interface_python.cpp src/PusherSlider.cpp src/Friction.cpp src/LinePusher.cpp src/OptProgram.cpp src/jsoncpp.cpp src/LoopControl.cpp src/MPC.cpp src/LModes.cpp src/FOM.cpp src/ABBRobot.cpp src/main.cpp src/PracticalSocket/PracticalSocket.cpp src/egm/egm.pb.cc src/Pusher.h src/PointPusher.h src/PointPusher.cpp src/MPC_thread.h src/MPC_thread.cpp src/ik_fast_interface_python.h)
+add_executable(push_control  src/HybridController.cpp src/GPDataController.cpp src/Helper.cpp src/ikfast_interface_python.cpp src/PusherSlider.cpp src/Friction.cpp src/LinePusher.cpp src/OptProgram.cpp src/jsoncpp.cpp src/LoopControl.cpp src/MPC.cpp src/LModes.cpp src/FOM.cpp src/ABBRobot.cpp src/main.cpp src/PracticalSocket/PracticalSocket.cpp src/egm/egm.pb.cc src/Pusher.h src/PointPusher.h src/PointPusher.cpp src/MPC_thread.h src/MPC_thread.cpp src/ik_fast_interface_python.h src/Controller.h)
 
 ###########################
 ## Target link libraries ##
